--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <p class=" mx-5 ">This laptop's unrivalled flexibility and AI features like Live Captions and Cocreator, enable you to do more than you ever imagined.</p>
             <button class="text-white bg-blue-800 font-bold  py-2 my-6 ml-5 mr-52 md:mx-5 md:px-4">Learn more</button>
         </div>
-        <div class="right"><img src="/assets/surface-pro-CcY5mI67.avif" alt="" class="h-56 md:w-[100rem] md:h-[30rem] "></div>
+        <div class="right"><img src="./assets/surface-pro-CcY5mI67.avif" alt="" class="h-56 md:w-[100rem] md:h-[30rem] "></div>
     </div>
 
     <div class="promo my-5 md:flex md:space-x-10 md:justify-center">
